# vpo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks-summary.md  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  eslint.config.js  pyproject.toml  validation-architecture-research.md
.claude/agents/: a11y-deep-dive-reviewer.md  api-contract-reviewer.md  cli-dx-reviewer.md  concurrency-reviewer.md  config-flags-reviewer.md  data-integrity-reviewer.md  error-handling-reviewer.md  fullstack-web-reviewer.md  markdown-docs-reviewer.md  module-boundaries-reviewer.md  observability-reviewer.md  perf-scalability-reviewer.md  python-code-reviewer.md  python-refactor-engineer.md  python-sqlite-review.md  python-test-coverage-engineer.md  resource-lifecycle-reviewer.md  security-secrets-reviewer.md  supply-chain-hygiene-reviewer.md  timezone-datetime-reviewer.md  ui-ux-reviewer.md  unicode-text-reviewer.md
.claude/commands/: big-review.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
.specify/memory/: constitution.md
changelog.d/: video-actions.md
crates/vpo-core/: Cargo.toml
crates/vpo-core/src/: discovery.rs  hasher.rs  lib.rs
docker/ffmpeg/: Dockerfile  README.md  ffmpeg-docker  ffprobe-docker
docker/vpo/: Dockerfile  README.md
docs/: ARCHITECTURE.md  INDEX.md  PRD.md  api-webui.md  daemon-mode.md  glossary.md  plugin-author-guide.md  plugins.md  reports.md  systemd.md  tutorial.md
docs/agents/: agent-playbook.md  agent-prompts.md
docs/decisions/: ADR-0001-utc-everywhere.md  ADR-0002-policy-schema-versioning.md  ADR-0003-plugin-interface-stability.md  ADR-0004-conditional-policy-schema.md  vanilla-js-state-management-research.md
docs/design/: DESIGN_INDEX.md  LANGUAGE-INPUT-IMPLEMENTATION-GUIDE.md  LANGUAGE-INPUT-README.md  LANGUAGE-INPUT-RESEARCH-SUMMARY.md  LANGUAGE-INPUT-SUMMARY.md  design-database.md  design-language-code-input-ux.md  design-media-scanner.md  design-plugins.md  design-policy-engine.md
docs/examples/: cleanup-policy.yaml  container-conversion-policy.yaml  default-policy.yaml  mp4-conversion-policy.yaml  track-filtering-policy.yaml
docs/internals/: error-handling.md  logging-and-metrics.md  time-and-timezones.md
docs/overview/: architecture.md  data-model.md  project-overview.md
docs/systemd/: vpo.service
docs/usage/: authentication.md  cli-usage.md  conditional-policies.md  configuration.md  container-metadata.md  external-tools.md  init-command.md  jobs.md  multi-language-detection.md  policies.md  policy-editor.md  transcode-policy.md  v11-migration.md  workflows.md
examples/plugins/hello_world/: README.md  pyproject.toml
examples/plugins/hello_world/src/hello_world/: __init__.py
examples/plugins/hello_world/tests/: test_plugin.py
examples/plugins/simple_reorder_plugin/: README.md  pyproject.toml
examples/plugins/simple_reorder_plugin/src/simple_reorder/: __init__.py
examples/policies/: audio-synthesis.yaml  conditional-rules.yaml  container-conversion.yaml  container-metadata.yaml  media-normalization.yaml  multi-phase-production.yaml  radarr-metadata.yaml  selective-phases.yaml  single-phase-minimal.yaml  sonarr-metadata.yaml  track-filtering.yaml  transcode-conditional-hevc.yaml  transcode-conditional.yaml  transcode-hevc.yaml  transcription-analysis.yaml  transcription-language-fix.yaml  two-phase-workflow.yaml
policies/examples/: multi-language.yaml
scripts/: batch_policy_preview.py  check_doc_sync.py  find_test_samples.py  generate_test_media.py
specs/001-project-skeleton/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-library-scanner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-media-introspection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-policy-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-plugin-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-transcode-pipelines/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-audio-transcription/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-operational-ux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-polish-packaging-plugins/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-report-export-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-daemon-systemd-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-web-ui-shell/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-settings-about-panel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-jobs-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-job-detail-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-live-job-polling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-library-list-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-library-filters-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-file-detail-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-transcriptions-list/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-transcription-detail/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-policies-list-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-policy-editor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  yaml-preservation-research.md
tests/: __init__.py  conftest.py  test_package.py
(+1136 files in other folders)
