[project]
name = "video-policy-orchestrator"
version = "0.1.0"
description = "A spec-driven tool for scanning, organizing, and transforming video libraries using user-defined policies and an extensible plugin architecture"
requires-python = ">=3.10"
authors = [
    {name = "VPO Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.5",
    "pytest>=9.0.1",
    "maturin>=1.7",
    "pre-commit>=4.0",
]

[project.scripts]
vpo = "video_policy_orchestrator.cli:main"

[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "video_policy_orchestrator._core"
python-source = "src"
manifest-path = "crates/vpo-core/Cargo.toml"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
