[project]
name = "vpo"
version = "0.2.0"
description = "A spec-driven tool for scanning, organizing, and transforming video libraries using user-defined policies and an extensible plugin architecture"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "VPO Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["video", "media", "policy", "ffmpeg", "mkv", "transcoding", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.10",
    "aiohttp>=3.9",
    "aiohttp-jinja2>=1.6",
    "aiohttp-session>=2.12",
    "cryptography>=41.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "ruamel.yaml>=0.18.0",
    "wcwidth>=0.2",
]

[project.urls]
Homepage = "https://github.com/randomparity/vpo"
Documentation = "https://github.com/randomparity/vpo/tree/main/docs"
Repository = "https://github.com/randomparity/vpo.git"
Issues = "https://github.com/randomparity/vpo/issues"
Changelog = "https://github.com/randomparity/vpo/releases"

[project.optional-dependencies]
dev = [
    "ruff>=0.14.5",
    "pytest>=9.0.1",
    "pytest-aiohttp>=1.0.5",
    "pytest-cov>=6.0",
    "maturin>=1.7",
    "pre-commit>=4.0",
    "bandit[toml]>=1.8.0",
    "detect-secrets>=1.5.0",
]

[project.scripts]
vpo = "vpo.cli:main"

[project.entry-points."vpo.plugins"]
radarr-metadata = "vpo.plugins.radarr_metadata:RadarrMetadataPlugin"
sonarr-metadata = "vpo.plugins.sonarr_metadata:SonarrMetadataPlugin"

[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "vpo._core"
python-source = "src"
manifest-path = "crates/vpo-core/Cargo.toml"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require external tools)",
    "slow: marks tests as slow (may take longer than usual)",
]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/vpo"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
fail_under = 60
show_missing = true
precision = 1

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = [
    # B101: assert_used - we use asserts in tests
    "B101",
    # B601: paramiko_calls - not using paramiko
    "B601",
    # B602: subprocess_popen_with_shell_equals_true - we need shell for some operations
    "B602",
    # B608: hardcoded_sql_expressions - false positives from f-strings building
    # parameterized queries with IN clauses using proper ? placeholders
    "B608",
]
# Target only Python files in src/
targets = ["src/vpo"]
