[package]
name = "vpo-core"
version = "0.2.0"
edition = "2021"

[lib]
name = "vpo_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.16"
