[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vpo-hello-world"
version = "0.1.0"
description = "Example VPO plugin - Hello World template"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["vpo", "plugin", "video-policy-orchestrator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "video-policy-orchestrator>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.entry-points."vpo.plugins"]
hello-world = "hello_world:plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_world"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
