[project]
name = "simple-reorder-plugin"
version = "1.0.0"
description = "Example VPO plugin that reorders subtitle tracks after video"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VPO Team" }]
keywords = ["vpo", "plugin", "video", "reorder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "vpo>=0.1.0",
]

[project.entry-points."vpo.plugins"]
simple-reorder = "simple_reorder:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_reorder"]
